--- a/style.css
+++ b/style.css
@@ -1,17 +1,33 @@
 body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
+   
 }
+
 h1{
     font-size: 60px;
+}
+h2{
+    font-size: 45px;
+    color: gray;
+}
+h3{
+    font-size: 20px;
+    font-weight: 350;
 }
 .orange{
     color: rgb(181, 123, 16);
 }
 .hero{
+  
+    background-repeat: no-repeat;
     display: flex;
-    width: 100%;
-    margin-top: 100px;
+    height: 100vh;
+    /* width: 100%; */
+    margin-top: 150px;
+    background-position: center;
+    background-size: cover;
+    
     
     
 }
@@ -23,17 +39,99 @@ h1{
 .half-hero img {
     width: 80%;
     
-
-
 }
 .button_work{
     margin-top: 45px;
 }
 .button{
-    background-color: rgb(240, 174, 51);
+    background-image: linear-gradient(#FBA24F, tomato);
     text-decoration: none;
     border-radius: 30px;
     font-size: 20px;
     padding: 15px 30px;
+    box-shadow: 0px 2px 4px 0px rgb(221, 184, 116),
+            2px 4px 8px 0px rgb(221, 184, 116),
+            4px 8px 16px 0px rgb(221, 184, 116),
+            4px 8px 32px 0px rgb(221, 184, 116);
+    color: white;
+}
+.button:hover{
+    color: antiquewhite;
+}
+
+/******hero section End***** */
+
+/* ********about section start**** */
+.about_container{
+    background-image: url(./images/shapes/7.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 100vh;
+    margin-top: 120px;
+    display: flex;
     
 }
+.about_img{
+    padding-top: 100px;
+    width: 80%;
+}
+.about-details{
+    padding-top: 80px;
+    width: 60%;
+    align-items: center;
+}
+
+/* ********aobut section end**** */
+
+
+/* ********recipies section start**** */
+
+.recipies-container{
+    margin-top: 80px;
+    text-align: center;
+    /* align-items: center; */
+    
+}
+.recipie_details{
+      text-align: center;
+      padding-left: 25%;
+      padding-right: 20%;   
+}
+.recipie-title{
+    text-align: left;
+    padding: 5px 55px;
+    font-size: 35px;
+    color: solid black;
+    font-weight: bold;
+
+
+}
+/* ********recipies section end**** */
+
+/* ********card section start**** */
+.card-holder{
+    display: flex;
+    width: 110%;
+    margin-left: 30px;
+}
+.card1{
+    border: 2px;
+    padding: 55px 0 0 0;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 40%;
+    border-radius: 50px;
+    margin: 25px;
+    
+    
+}
+.card1 img{
+    width: 80%;
+    border-radius: 40px;
+}
+.card-details {
+    text-align: left;
+    padding: 0 20px 30px 55px;
+
+}
+/* ********card section end**** */
